--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 			        <li><a href="#">INICIO</a></li>
 			        <li><a href="#mu-about">SOBRE</a></li>
 			
-			        <li><a href="#mu-service">PROGAMAÇÃO</a></li>
-			        <li><a href="#mu-portfolio">NOTÍCIAS</a></li>
-		            <li><a href="#mu-team">NOSSO TIME</a></li>
+			        <li><a href="#mu-counter">PROGAMAÇÃO</a></li>
+		            <li><a href="#mu-team">PALESTRANTES</a></li>
 		            <!--<li><a href="#mu-clients">OUR CLIENTS</a></li> -->
 		            <li><a href="#mu-contact">CONTATO</a></li>
 		      	</ul>
@@ -88,8 +87,7 @@
 
 	<section id="mu-featured-slider">
 		<div class="row">
-			<div class="col-md-12">
-				<div class="mu-featured-slide">
+
 
 					<!-- Start Single slide -->
 					<div class="mu-featured-slider-single">
@@ -102,30 +100,7 @@
 					</div>
 					<!-- End Single slide -->
 
-					<!-- Start Single slide -->
-					<div class="mu-featured-slider-single">
-						<img src="assets/images/slider-img-2.jpg">
-						<div class="mu-featured-slider-content">
-							<h1>EM CONTRUÇÃO</h1>
-							<p>EM CONTRUÇÃO</p>
-							<a href="#" class="mu-primary-btn">EM CONTRUÇÃO</a>
-						</div>
-					</div>
-					<!-- End Single slide -->
-
-					<!-- Start Single slide -->
-					<div class="mu-featured-slider-single">
-						<img src="assets/images/slider-img-3.jpg">
-						<div class="mu-featured-slider-content">
-							<h1>EM CONTRUÇÃO</h1>
-							<p>EM CONTRUÇÃO</p>
-							<a href="#" class="mu-primary-btn">EM CONTRUÇÃO</a>
-						</div>
-					</div>
-					<!-- End Single slide -->
-
-				</div>
-			</div>			
+			
 		</div>
 	</section>
 	
@@ -145,64 +120,15 @@
 							<div class="mu-about-header">
 								<h2 class="mu-heading-title">SOBRE <span>NÓS</span></h2>
 								<span class="mu-header-dot"></span>
-								<p>Em Construção</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
 
-							<!-- Start About Us Content -->
-							<div class="mu-about-content">
-								<div class="row">
-
-									<!-- About Us Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-about-content-single">
-											<span class="mu-about-icon-box">
-												<i class="icon-puzzle"></i>
-											</span>
-											<h4>Minicursos</h4>
-											<p>Em construção.</p>
-										</div>
-									</div>
-									<!-- / About Us Single Content -->
-
-									<!-- About Us Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-about-content-single">
-											<span class="mu-about-icon-box">
-												<i class="icon-settings"></i>
-											</span>
-											<h4>Mesas redondas</h4>
-											<p>Em construção.</p>
-										</div>
-									</div>
-									<!-- / About Us Single Content -->
-
-									<!-- About Us Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-about-content-single">
-											<span class="mu-about-icon-box">
-												<i class="icon-screen-tablet"></i>
-											</span>
-											<h4>Palestras</h4>
-											<p>Em construção.</p>
-										</div>
-									</div>
-									<!-- / About Us Single Content -->
-
-									<!-- About Us Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-about-content-single">
-											<span class="mu-about-icon-box">
-												<i class="icon-docs"></i>
-											</span>
-											<h4>Encontros</h4>
-											<p>Em construção.</p>
-										</div>
-									</div>
-									<!-- / About Us Single Content -->
-
-								</div>
-							</div>
-							<!-- End About Us Content -->
+							
 
 						</div>
 					</div>
@@ -217,50 +143,37 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="mu-counter-area">
-							<h2 class="mu-heading-title">SOME FACTS ABOUT US</h2>
+							<h2 class="mu-heading-title">PROGRAMAÇÃO</h2>
 
 							<div class="mu-counter-block">
 								<div class="row">
 
-									<!-- Start Single Counter -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-single-counter">
-											<i class="icon-like"></i>
-											<div class="counter-value" data-count="750">0</div>
-											<h5 class="mu-counter-name">Projects Completed</h5>
-										</div>
-									</div>
-									<!-- / Single Counter -->
-
-									<!-- Start Single Counter -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-single-counter">
-											<i class="icon-emotsmile"></i>
-											<div class="counter-value" data-count="560">0</div>
-											<h5 class="mu-counter-name">Happy Clients</h5>
-										</div>
-									</div>
-									<!-- / Single Counter -->
-
-									<!-- Start Single Counter -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-single-counter">
-											<i class="icon-cup"></i>
-											<div class="counter-value" data-count="1555">0</div>
-											<h5 class="mu-counter-name">Cups Consumed</h5>
-										</div>
-									</div>
-									<!-- / Single Counter -->
-
-									<!-- Start Single Counter -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-single-counter">
-											<i class="icon-trophy"></i>
-											<div class="counter-value" data-count="10">0</div>
-											<h5 class="mu-counter-name">Got Awards</h5>
-										</div>
-									</div>
-									<!-- / Single Counter -->
+									<table class="table">
+										<thead>
+											<tr>
+												<th scope="col">HORARIO</th>
+												<th scope="col">PROGRAMAÇÃO</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<th scope="row">8:30</th>
+												<td>Evento</td>
+											</tr>
+											<tr>
+												<th scope="row">9:30</th>
+												<td>Evento</td>
+											</tr>
+											<tr>
+												<th scope="row">10:30</th>
+												<td>Evento</td>
+											</tr>
+											<tr>
+												<th scope="row">11:30</th>
+												<td>Evento</td>
+											</tr>
+										</tbody>
+									</table>
 
 								</div>
 							</div>
@@ -273,251 +186,9 @@
 		</section>
 		<!-- End Counter -->
 
-		<!-- Start Service -->
-		<section id="mu-service">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="mu-service-area">
+		
 
-							<div class="mu-service-header">
-								<h2 class="mu-heading-title">OUR <span>SERVICES</span></h2>
-								<span class="mu-header-dot"></span>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
-							</div>
-
-							<!-- Start Service Content -->
-							<div class="mu-service-content">
-								<div class="row">
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-vector"></i>
-											</span>
-											<h4>UI/UX Design</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-screen-desktop"></i>
-											</span>
-											<h4>Web Development</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-briefcase"></i>
-											</span>
-											<h4>Branding</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-screen-tablet"></i>
-											</span>
-											<h4>Responsive Layout</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-screen-smartphone"></i>
-											</span>
-											<h4>Mobile Application</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-graph"></i>
-											</span>
-											<h4>Digital Marketing</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-camrecorder"></i>
-											</span>
-											<h4>Background Videos</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-									<!-- Service Single Content -->
-									<div class="col-md-3 col-sm-6">
-										<div class="mu-service-content-single">
-											<span class="mu-service-icon-box">
-												<i class="icon-people"></i>
-											</span>
-											<h4>24/7 Live Support</h4>
-											<p>Lorem ipsum dolor sit amet, consect adipis elit minim veniam ettis inkeras.</p>
-										</div>
-									</div>
-									<!-- / Service Single Content -->
-
-								</div>
-							</div>
-							<!-- End Service Content -->
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Service -->
-
-		<!-- Start Portfolio -->
-		<section id="mu-portfolio">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="mu-portfolio-area">
-
-							<div class="mu-portfolio-header">
-								<h2 class="mu-heading-title">OUR <span>PORTFOLIO</span></h2>
-								<span class="mu-header-dot"></span>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever</p>
-							</div>
-
-							<!-- Start Portfolio Filter -->
-							<div class="mu-portfolio-filter-area">
-								<ul class="mu-simplefilter">
-					                <li class="active" data-filter="all">All</li>
-					                <li data-filter="1">Web App</li>
-					                <li data-filter="2">UI/UX</li>
-					                <li data-filter="3">Graphics Design</li>
-					                <li data-filter="4">Mobile App</li>
-					                <li data-filter="5">Branding</li>
-					                <li data-filter="6">Marketing</li>
-					            </ul>
-							</div>
-
-							<!-- Start Portfolio Content -->
-							<div class="mu-portfolio-content">
-								<div class="filtr-container">
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
-					                   <a class="mu-imglink" href="assets/images/portfolio/img-1.jpeg" title="Web Development">
-						                   	<img class="img-responsive" src="assets/images/portfolio/img-1.jpeg" alt="image">
-						                   	<div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">WEB DEVELOPMENT</h4>
-						                    </div>
-					                   </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-2.jpeg" title="UI/UX DESIGN">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-2.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">UI/UX DESIGN</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-3.jpeg" title="GRAPHICS DESIGN">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-3.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">GRAPHICS DESIGN</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-4.jpeg" title="MOBILE APP">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-4.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">MOBILE APP</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-5.jpeg" title="BRANDING">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-5.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	 <h4 class="mu-filter-item-title">BRANDING</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6">
-					                   <a class="mu-imglink" href="assets/images/portfolio/img-6.jpeg" title="MARKETING">
-						                   	<img class="img-responsive" src="assets/images/portfolio/img-6.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">MARKETING</h4>
-						                    </div>
-						                </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
-					                   <a class="mu-imglink" href="assets/images/portfolio/img-7.jpg" title="WEB DEVELOPMENT">
-						                   	<img class="img-responsive" src="assets/images/portfolio/img-7.jpg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">WEB DEVELOPMENT</h4>
-						                    </div>
-					                   </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-8.jpeg" title="MOBILE APP">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-8.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">MOBILE APP</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3">
-					                    <a class="mu-imglink" href="assets/images/portfolio/img-9.jpeg" title="GRAPHICS DESIGN">
-					                    	<img class="img-responsive" src="assets/images/portfolio/img-9.jpeg" alt="image">
-						                    <div class="mu-filter-item-content">
-						                    	<h4 class="mu-filter-item-title">GRAPHICS DESIGN</h4>
-						                    </div>
-					                    </a>
-					                </div>
-
-					            </div>
-							</div>
-							<!-- End Portfolio Content -->
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Portfolio -->
+		
 
 		<!-- Start Team -->
 		<section id="mu-team">
@@ -527,9 +198,9 @@
 						<div class="mu-team-area">
 
 							<div class="mu-team-header">
-								<h2 class="mu-heading-title">NOSSO <span>TIME</span></h2>
+								<h2 class="mu-heading-title">PALESTRANTES</h2>
 								<span class="mu-header-dot"></span>
-								<p><li><a href="#mu-portfolio">NOTÍCIAS</a></li></p>
+
 							</div>
 
 							<!-- Start Team Content -->
@@ -541,15 +212,11 @@
 										<div class="mu-team-content-single">
 											<div class="mu-team-profile">
 												<img src="assets/images/team-member-1.jpg" alt="team member">
-												<div class="mu-team-social-info">
-													<a href="#"><i class="icon-social-facebook"></i></a>
-													<a href="#"><i class="icon-social-twitter"></i></a>
-													<a href="#"><i class="icon-social-linkedin"></i></a>
-												</div>
+
 											</div>
 											<div class="mu-team-info">
 												<h4>PETCOMP</h4>
-												<span>Acesse</span>
+												<span><a href="#">Acesse</a></span>
 											</div>
 											
 										</div>
@@ -561,15 +228,11 @@
 										<div class="mu-team-content-single">
 											<div class="mu-team-profile">
 												<img src="assets/images/team-member-2.jpg" alt="team member">
-												<div class="mu-team-social-info">
-													<a href="#"><i class="icon-social-facebook"></i></a>
-													<a href="#"><i class="icon-social-twitter"></i></a>
-													<a href="#"><i class="icon-social-linkedin"></i></a>
-												</div>
+
 											</div>
 											<div class="mu-team-info">
 												<h4>PETFísica</h4>
-												<span>Acesse</span>
+												<span><a href="#">Acesse</a></span>
 											</div>
 										</div>
 									</div>
@@ -580,15 +243,11 @@
 										<div class="mu-team-content-single">
 											<div class="mu-team-profile">
 												<img src="assets/images/team-member-3.jpg" alt="team member">
-												<div class="mu-team-social-info">
-													<a href="#"><i class="icon-social-facebook"></i></a>
-													<a href="#"><i class="icon-social-twitter"></i></a>
-													<a href="#"><i class="icon-social-linkedin"></i></a>
-												</div>
+
 											</div>
 											<div class="mu-team-info">
 												<h4>PETBio</h4>
-												<span>Acesse</span>
+												<span><a href="#">Acesse</a></span>
 											</div>
 										</div>
 									</div>
