--- a/index.html
+++ b/index.html
@@ -265,77 +265,40 @@
 		</section>
 		<!-- End Team -->
 
-		
-		<!-- Start Contact -->
-		<section id="mu-contact">
+
+
+
+
+		<!-- Start Counter -->
+		<section id="mu-inscr">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="mu-contact-area">
+						<div class="mu-counter-area">
+							<h2 class="mu-heading-title">INSCRIÇÕES</h2>
 
-							<div class="mu-contact-header">
-								<h2 class="mu-heading-title">FALE <span>CONOSCO</span></h2>
-								<span class="mu-header-dot"></span>
-								<p><li><a href="#mu-portfolio">NOTÍCIAS</a></li></p>
+							<div class="mu-counter-block">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
-
-							<!-- Start Contact Content -->
-							<div class="mu-contact-content">
-								<div class="row">
-
-									<div class="col-md-8">
-										<div class="mu-contact-left">
-										<div id="form-messages"></div>
-											<form id="ajax-contact" method="post" action="mailer.php" class="mu-contact-form">
-												<div class="form-group">                
-													<input type="text" class="form-control" placeholder="Name" id="name" name="name" required>
-												</div>
-												<div class="form-group">                
-													<input type="email" class="form-control" placeholder="Enter Email" id="email" name="email" required>
-												</div>              
-												<div class="form-group">
-													<textarea class="form-control" placeholder="Message" id="message" name="message" required></textarea>
-												</div>
-												<button type="submit" class="mu-send-msg-btn"><span>SUBMIT</span></button>
-								            </form>
-										</div>
-									</div>	
-
-									<div class="col-md-4">
-										<div class="mu-contact-right">
-											<h4>Biziness</h4>
-											<p>Em construção.</p>
-											<address>
-												<p><i class="icon-location-pin"></i>Dooley Branch Rd Millen, GA 30442, USA</p>
-												<p><i class="icon-envelope"></i>contact@domain.com</p>
-												<p><i class="icon-phone"></i>+90 987 678 9834</p>
-											</address>
-											<div class="mu-social-media">
-												<a href="#"><i class="icon-social-facebook"></i></a>
-												<a href="#"><i class="icon-social-twitter"></i></a>
-												<a href="#"><i class="icon-social-google"></i></a>
-												<a href="#"><i class="icon-social-linkedin"></i></a>
-												<a href="#"><i class="icon-social-youtube"></i></a>
-											</div>
-										</div>
-									</div>	
-
-								</div>
+							<div class="inscr-bottom">
+								<a href="#" class="mu-primary-btn">INSCREVA-SE!</a>
 							</div>
-							<!-- End Contact Content -->
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- End Contact -->
+		<!-- End Counter -->
 
-		<!-- Start Google Map -->
-		<section id="mu-google-map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d589888.4396405783!2d-82.41588603632052!3d32.866951223053896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f9f727a4ed30eb%3A0xf2139b0c5c7ae1ec!2sDooley+Branch+Rd%2C+Millen%2C+GA+30442%2C+USA!5e0!3m2!1sen!2sbd!4v1497376364225" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</section>
-		<!-- End Google Map -->
+
+
+
+
 
 	</main>
 	
