--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Biziness : Home</title>
+    <title>Workshop PPGCC</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/imges/favicon.ico"/>
     <!-- Font Awesome -->
@@ -57,7 +57,7 @@
 		      </button>
 
 		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">ENEPET 2019</a>
+		      <a class="navbar-brand" href="#">Workshop PPGCC</a>
 
 		      <!-- Image Logo -->
 		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
