--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			        <li><a href="#mu-counter">PROGAMAÇÃO</a></li>
 		            <li><a href="#mu-team">PALESTRANTES</a></li>
 		            <!--<li><a href="#mu-clients">OUR CLIENTS</a></li> -->
-		            <li><a href="#mu-contact">CONTATO</a></li>
+		            <li><a href="#mu-inscr">INSCRIÇÃO</a></li>
 		      	</ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
@@ -95,7 +95,7 @@
 						<div class="mu-featured-slider-content">
 							<h1>EM CONSTRUÇÃO</h1>
 							<p>Em Contrução</p>
-							<a href="#" class="mu-primary-btn">INSCREVA-SE!</a>
+							<a href="mu-inscr" class="mu-primary-btn">INSCREVA-SE!</a>
 						</div>
 					</div>
 					<!-- End Single slide -->
@@ -286,7 +286,7 @@
 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
 							<div class="inscr-bottom">
-								<a href="#" class="mu-primary-btn">INSCREVA-SE!</a>
+								<a href="https://forms.gle/XmMzKHfiXpGbxEcYA" class="mu-primary-btn">INSCREVA-SE!</a>
 							</div>
 						</div>
 					</div>
