update color theme.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							<div class="mu-counter-block">
 								<div class="row">
 
-									<table class="table">
+									<table class="table cronog">
 										<thead>
 											<tr>
 												<th scope="col">HORARIO</th>
