atualizando cores da página

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Gallery Lightbox -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/ppgcc-theme.css" rel="stylesheet">
+    <link id="switcher" href="assets/css/theme-color/red-theme.css" rel="stylesheet">
 
     <!-- Main Style -->
     <link href="style.css" rel="stylesheet">
@@ -309,7 +309,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">PETCOMP</a>. Todos os direitos reservados.</p>
+					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">PETComp</a>. Todos os direitos reservados.</p>
 				</div>
 			</div>
 
