--- a/index.html
+++ b/index.html
@@ -31,14 +31,7 @@
     <!-- Montserrat for Title -->
   	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
  
- 
-	
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
 
@@ -56,11 +49,9 @@
 		        <span class="icon-bar"></span>
 		      </button>
 
-		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">Workshop PPGCC</a>
+		      
 
-		      <!-- Image Logo -->
-		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
+		      <a id="logo"><img src="assets/images/logo.png"></a>
 
 
 		    </div>
@@ -95,7 +86,7 @@
 						<div class="mu-featured-slider-content">
 							<h1>EM CONSTRUÇÃO</h1>
 							<p>Em Contrução</p>
-							<a href="mu-inscr" class="mu-primary-btn">INSCREVA-SE!</a>
+							<a href="https://forms.gle/pMaRrq5ihLDUo5iY7" target="_blanck" class="mu-primary-btn">INSCREVA-SE!</a>
 						</div>
 					</div>
 					<!-- End Single slide -->
@@ -103,9 +94,7 @@
 			
 		</div>
 	</section>
-	
-	<!-- Start Featured Slider -->
-	
+		
 	<!-- Start main content -->
 		
 	<main role="main">
@@ -127,9 +116,6 @@
 								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							</div>
-
-							
-
 						</div>
 					</div>
 				</div>
@@ -186,10 +172,6 @@
 		</section>
 		<!-- End Counter -->
 
-		
-
-		
-
 		<!-- Start Team -->
 		<section id="mu-team">
 			<div class="container">
@@ -200,7 +182,6 @@
 							<div class="mu-team-header">
 								<h2 class="mu-heading-title">PALESTRANTES</h2>
 								<span class="mu-header-dot"></span>
-
 							</div>
 
 							<!-- Start Team Content -->
@@ -252,54 +233,15 @@
 										</div>
 									</div>
 									<!-- / Service Single Content -->
-
-
 								</div>
 							</div>
 							<!-- End Team Content -->
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- End Team -->
-
-
-
-
-
-		<!-- Start Counter -->
-		<section id="mu-inscr">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="mu-counter-area">
-							<h2 class="mu-heading-title">INSCRIÇÕES</h2>
-
-							<div class="mu-counter-block">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-							</div>
-							<div class="inscr-bottom">
-								<a href="https://forms.gle/XmMzKHfiXpGbxEcYA" class="mu-primary-btn">INSCREVA-SE!</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- End Counter -->
-
-
-
-
-
-
 	</main>
 	
 	<!-- End main content -->	
@@ -309,7 +251,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p>&copy; Copyright <a rel="nofollow" href="http://markups.io">PETComp</a>. Todos os direitos reservados.</p>
+					<p>&copy; Copyright <a rel="nofollow" href="http://pet.ufma.br/petcomp">PETComp</a>. Todos os direitos reservados.</p>
 				</div>
 			</div>
 
