--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Gallery Lightbox -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/red-theme.css" rel="stylesheet">
+    <link id="switcher" href="assets/css/red-theme.css" rel="stylesheet">
 
     <!-- Main Style -->
     <link href="style.css" rel="stylesheet">
@@ -36,7 +36,7 @@
   <body>
 
   	<!-- Start Header -->
-	<header id="mu-header" class="" role="banner">
+	<header id="mu-header" class="header" role="banner">
 		<div class="container">
 			<nav class="navbar navbar-default mu-navbar">
 		  <div class="container-fluid">
